--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,11 @@ spring:
     url: jdbc:mysql://localhost/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  jackson:
+    default-property-inclusion: non_empty
 server:
   context-path : /sell
+
 #logging:
 #  pattern:
 #    console: "%d - %msg%n"
